updated location check in

--- a/index.html
+++ b/index.html
@@ -59,7 +59,19 @@
 	</script>
 	
 	
-	<div class="location"></div>
+	<div class="landing">
+		<div id="nabeload">
+			Welcome. Hold on a sec while we figure out where you are.
+		</div>
+		
+		<select class="location">
+			<option value="#">Are you near any of these?</option>
+			<option value="home">Home</option>
+			<option value="work">Work</option>
+			<option value="school">School</option>
+			<option value="#"> </option>
+		</select>
+	</div>
 	<div id="blur"></div>
 		
 	
