updated pull from db

--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
 					
 					<select id="timeType">
 						<option id="1">day</option>
-						<option id="3" selected>three days</option>
+						<option id="3" >three days</option>
 						<option id="7" >week</option>
-						<option id="30" >month</option>
+						<option id="30" selected>month</option>
 					</select>
 				</form>
 			<div id="loading_feed"><i class="fa fa-spinner fa-spin"></i></div>
