pre first ec2 push

--- a/index.html
+++ b/index.html
@@ -87,25 +87,25 @@
 					
 					<select id="newsType">
 						<option id="All" selected>The Most Read</option>
-						<option id="Arts" >Arts + Culture</option>
-						<option id="Business">Business</option>
+						<option id="arts" >Arts + Culture</option>
+						<option id="business">Business</option>
 						<!-- <option id="Education">education</option> -->
-						<option id="Entertainment">Entertainment</option>
-						<option id="Environment" >Environmental</option>
+						<option id="entertainment">Entertainment</option>
+						<option id="environment" >Environmental</option>
 						<!-- <option id="Food">food</option> -->
-						<option id="Health">Health</option>
-						<option id="Lifestyle">Lifestyle</option>
-						<option id="New York">New York</option>
-						<option id="Media">Media</option>
-						<option id="Money">Money</option>
-						<option id="Politics">Political</option>
-						<option id="Science">Science</option>
-						<option id="Sports">Sports</option>
-						<option id="Tech">Technology</option>
+						<option id="health">Health</option>
+						<option id="lifestyle">Lifestyle</option>
+						<option id="new york">New York</option>
+						<option id="media">Media</option>
+						<option id="money">Money</option>
+						<option id="politics">Political</option>
+						<option id="science">Science</option>
+						<option id="sports">Sports</option>
+						<option id="tech">Technology</option>
 						<!-- <option id="Travel">travel</option> -->
-						<option id="United States">United States</option>
+						<option id="united states">United States</option>
 						<option id="oddly enough">Oddly Enough</option>
-						<option id="World">World</option>
+						<option id="world">World</option>
 					</select>
 					
 					<p id="newsLabel"> news </p>
