twitter post up and running

--- a/index.html
+++ b/index.html
@@ -188,5 +188,10 @@
 	<script type="text/javascript" src="bower_components/fingerprint/fingerprint.js"></script>
 	<script type="text/javascript" src="bower_components/underscore/underscore.js"></script>
 	<script src="app.js"></script>
+	<script>
+	$( document ).ready(function() {
+	   app.init.home();
+	});
+	</script>
 
 </body>
