--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
 	<script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
 	<script type="text/javascript" src="bower_components/fingerprint/fingerprint.js"></script>
 	<script type="text/javascript" src="bower_components/underscore/underscore.js"></script>
+	<script type="text/javascript" src="bower_components/zeroclipboard/ZeroClipboard.js"></script>
 	<script src="app.js"></script>
 	<script>
 	$( document ).ready(function() {
