--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
 <link rel="icon" type="image/x-icon" href="style/img/fav.ico" />
 <link rel="apple-touch-icon" href = "style/img/fav.ico" />
 <link rel="stylesheet" href="style/normalize.min.css">
-<link rel="stylesheet" href="style/main.css">
 <link rel="stylesheet" href="style/fonts/font-awesome/css/font-awesome.min.css">
+<link rel="stylesheet" href="bower_components/toastr/toastr.min.css">
+<link rel="stylesheet" href="style/main.css">
 
+	<script type="text/javascript" src=""></script>
+	
 </head>
 
 
@@ -113,6 +116,9 @@
 			</form>
 		</div>
 	</div>
+	
+	<!--tweet pop up-->
+	<div id="tweetpop"></div>
 	
 	<!-- header -->
 	<div class="logo">
@@ -226,6 +232,7 @@
 
 	<!--JS-->
 	<script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
+	<script type="text/javascript" src="bower_components/toastr/toastr.js"></script>
 	<script type="text/javascript" src="bower_components/fingerprint/fingerprint.js"></script>
 	<script type="text/javascript" src="bower_components/underscore/underscore.js"></script>
 	<script type="text/javascript" src="bower_components/zeroclipboard/ZeroClipboard.js"></script>
